<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_one"
        android:icon="@drawable/ic_launcher"
        android:title="@string/sn1_button">
    </item>
    <item
        android:id="@+id/item_two"
        android:icon="@drawable/ic_launcher"
        android:title="@string/sn2_button">
    </item>
    <item
        android:id="@+id/item_three"
        android:icon="@drawable/ic_launcher"
        android:title="@string/sn3_button">
    </item>
    <item
            android:id="@+id/item_four"
            android:icon="@drawable/ic_launcher"
            android:title="@string/sn4_button">
    </item>
    <item
            android:id="@+id/item_five"
            android:icon="@drawable/ic_launcher"
            android:title="@string/sn5_button">
    </item>
    <item
            android:id="@+id/item_six"
            android:icon="@drawable/ic_launcher"
            android:title="@string/sn6_button">
    </item>

</menu>