<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/grey">

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sn1_button"
            android:onClick="clickButton1" />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sn2_button"
            android:onClick="clickButton2" />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sn3_button"
            android:onClick="clickButton3" />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sn4_button"
            android:onClick="clickButton4" />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sn5_button"
            android:onClick="clickButton5" />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sn6_button"
            android:onClick="clickButton6" />

</LinearLayout>